logs/ohm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FormEncode-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/HTTPEncode-0.1.egg-info'...
Listing './lib/python3.5/site-packages/OHM-0.1.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/formencode'...
Listing './lib/python3.5/site-packages/formencode/i18n'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/da'...
Listing './lib/python3.5/site-packages/formencode/i18n/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/de'...
Listing './lib/python3.5/site-packages/formencode/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/el'...
Listing './lib/python3.5/site-packages/formencode/i18n/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/es'...
Listing './lib/python3.5/site-packages/formencode/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/et'...
Listing './lib/python3.5/site-packages/formencode/i18n/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/it'...
Listing './lib/python3.5/site-packages/formencode/i18n/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/javascript'...
Listing './lib/python3.5/site-packages/formencode/tests'...
Listing './lib/python3.5/site-packages/formencode/tests/htmlfill_data'...
Listing './lib/python3.5/site-packages/httpencode'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/ohm'...
Compiling './lib/python3.5/site-packages/ohm/server.py'...
***   File "./lib/python3.5/site-packages/ohm/server.py", line 138
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ohm/validators.py'...
***   File "./lib/python3.5/site-packages/ohm/validators.py", line 14
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
